# AttestationProject

./: .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
electronics_network/: admin.py  filters.py  models.py  paginators.py  serializers.py  services.py  tests.py  urls.py  views.py
electronics_network/fixtures/: contact_info_fixture.json  product_fixture.json  supply_chain_member_fixture.json
electronics_network/management/commands/: fill_with_data.py
electronics_network/migrations/: 0001_initial.py  0002_initial.py  0003_remove_supplychainmember_contact_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/fixtures/: groups_fixture.json  users_fixture.json
users/management/commands/: create_employee_group.py
users/migrations/: 0001_initial.py
